# Linguistic-Acceptibility

./: .env  README.md  model.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: main.yml
logs/cola/version_1/: events.out.tfevents.1705521982.jithish-ThinkPad-P53.103964.0  events.out.tfevents.1705549157.jithish-ThinkPad-P53.113445.0
week_0/: data.py  inference.py  notebook0.ipynb  train.py
week_0/logs/cola/version_1/: events.out.tfevents.1705550793.jithish-ThinkPad-P53.121318.0  events.out.tfevents.1705550974.jithish-ThinkPad-P53.123344.0
week_1/: inference.py  model.py  train.py
week_1/wandb/: latest-run
week_1/wandb/run-20240118_203441-9t6pak46/: run-9t6pak46.wandb
week_1/wandb/run-20240118_203441-9t6pak46/files/: config.yaml
week_1/wandb/run-20240118_204530-mq3bf0v1/: run-mq3bf0v1.wandb
week_1/wandb/run-20240118_204530-mq3bf0v1/files/: config.yaml
week_1/wandb/run-20240118_205409-vve04hq8/: run-vve04hq8.wandb
week_1/wandb/run-20240118_205409-vve04hq8/files/: config.yaml  requirements.txt  wandb-metadata.json
week_1/wandb/run-20240118_214818-uny8wxqf/: run-uny8wxqf.wandb
week_1/wandb/run-20240118_214818-uny8wxqf/files/: config.yaml  (+1 more)
week_1/wandb/run-20240118_215335-7wmz2vc2/: run-7wmz2vc2.wandb
week_1/wandb/run-20240118_220510-pvzl659n/: run-pvzl659n.wandb
week_1/wandb/run-20240118_221904-71t215mu/: run-71t215mu.wandb
week_1/wandb/run-20240119_023039-g8l33d79/: run-g8l33d79.wandb
week_1/wandb/run-20240119_024406-jtfkxvcc/: run-jtfkxvcc.wandb
week_1/wandb/run-20240119_024628-07t8wzct/: run-07t8wzct.wandb
week_2/: data.py  inference.py  model.py  train.py
week_2/configs/: config.yaml
week_2/configs/model/: default.yaml
week_2/dvcfiles/: trained-model.dvc
week_4/: inference_onnx.py  train.py
week_4/.github/: build_docker_image.yaml
week_4/json_key/: mlops-411817-166d291c532d.json
week_5/: Dockerfile  convert_onnx.py
week_6/: app.py
week_cicd/.dvc/: config
week_docker/: Dockerfile  requirements.txt
week_ecr/: Dockerfile
week_onnx/: .gitignore  inference_onnx.py
(+72 files in other folders)
