[tool.poetry]
name = "mlops-project-0"
version = "0.1.0"
description = ""
authors = ["Jithish J <135303624+jithsg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mlops_project_0"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
transformers = "^4.36.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
datasets = "^2.16.1"
pytorch-lightning="1.2.10"
ipython = "^8.20.0"
tensorboard = "^2.15.1"
wandb = "^0.16.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
pandas = "^2.1.4"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
omegaconf = "^2.3.0"
dvc = "^3.40.1"
dvc-gdrive = "^3.0.1"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
awscli = "^1.32.23"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
